Pull request #162: master.laguna-10.it-ot
Merge in UNGE/sw-mesa from master.laguna-10.it-ot to master.laguna-10

Squashed commit of the following:

commit 2ad81db1a69c65bf24f18b14b83fdd4928f5cbb3
Author: Henrik Bjoernlund <henrik.bjoernlund@microchip.com>
Date:   Wed Mar 16 08:58:02 2022 +0100

    Update of the ot_scheduling_strict_counter_test

commit d41ccfafa30d02af0c443c3289775788f7f99748
Author: Henrik Bjoernlund <henrik.bjoernlund@microchip.com>
Date:   Mon Mar 14 14:54:47 2022 +0100

    Update to Laguna OT test

commit b604653bef9cfa99257bc05a2fd2363d168fbcd3
Author: Henrik Bjoernlund <henrik.bjoernlund@microchip.com>
Date:   Mon Mar 14 14:10:27 2022 +0100

    Update to make qos-otit-scheduler-shaper.rb test pass

commit 3272db134aed1da956edab3e1391ae6d2d77c84c
Author: Henrik Bjoernlund <henrik.bjoernlund@microchip.com>
Date:   Mon Mar 14 09:27:00 2022 +0100

    Added Laguna OT example code and test

commit 21ba49b7e89daa44973fa3206d45f28864755e46
Author: Henrik Bjoernlund <henrik.bjoernlund@microchip.com>
Date:   Mon Mar 14 09:24:00 2022 +0100

    Minor Laguna debug print out and test correction

commit 4e5aeca5a72879a297ba2bff169acf010330baf8
Author: Henrik Bjoernlund <henrik.bjoernlund@microchip.com>
Date:   Tue Mar 8 10:19:13 2022 +0100

    Now able to compile for Fireant

commit 8f5eca121f734734dfc5e2ecac37603951ce9862
Author: Henrik Bjoernlund <henrik.bjoernlund@microchip.com>
Date:   Mon Feb 28 14:27:43 2022 +0100

    Added some IT-OT explanation and introduces struct member references

commit c08ec488daa742bf4e65a509da90c2d1b46f8ae9
Author: Henrik Bjoernlund <henrik.bjoernlund@microchip.com>
Date:   Fri Feb 18 17:06:34 2022 +0100

    Update to make IT-OT test pass

commit 3f0a8bfd3cb087d2c5b826a80acb91cbb73e8683
Author: Henrik Bjoernlund <henrik.bjoernlund@microchip.com>
Date:   Wed Feb 2 17:18:42 2022 +0100

    Corrected IT/OT TAS configuration documentation

commit 41b98290c760cb9fbc364c946fc936865a19e876
Author: Henrik Bjoernlund <henrik.b

--- a/mesa/docs/qos/qos.adoc
+++ b/mesa/docs/qos/qos.adoc
@@ -120,7 +120,20 @@ A policer can be configured to reduce the ingress information rate (either frame
 === QOS Egress Detailed.
 
 .Egress frame flow
+This is the egress flow when IT/OT Network slicing is not supported - MESA capability `MESA_CAP_QOS_OT` is zero.
 image:./qos-flow-egress.svg[]
+
+.Egress frame flow - IT/OT
+This is the egress flow when IT/OT Network slicing is supported - MESA capability `MESA_CAP_QOS_OT` is not zero.
+
+At egress there are separate shaper and scheduling paths
+for IT and OT classified frames. +
+
+The two paths has allocated separate queue buffer resources so that IT and OT frame does not share resources.
+Frames are classified as either a IT or OT frame at ingress.
+It is configured (`mesa_vlan_vid_conf_t::ot`) as a per VID property so all frames classified to a specific VID
+is classified as OT. Default a frame is classified as IT.
+image:./qos-flow-egress-it-ot.svg[]
 
 ==== Weighted Random Early Discard - WRED.
 
@@ -129,25 +142,67 @@ Detection can be configured (`mesa_wred_conf_t`). All frames goes through the
 WRED that can discard frames depending on the queue filling of the classified
 Priority and the classified DPL.
 
+==== Priority shaper.
+
+All frames are going through a priority shaper that shapes frames with a specific classified priority (queue).
+The shaper is configured in `mesa_qos_port_conf_t::queue` per port per priority (queue). A priority shaper is reducing
+the egress bit rate of a specific priority (queue).
+
+If MESA capability `MESA_CAP_QOS_OT` is not zero there is a separate priority shaper for IT and for OT frame flow. +
+Configuration of IT in `mesa_qos_port_conf_t::queue` +
+Configuration of OT in `mesa_qos_port_conf_t::ot_queue`
+
 ==== Scheduler.
 
 The scheduler that controls the transmission of all frames from the priority
-queues can be configured (`mesa_qos_port_conf_t`).
+queues can be configured in +
+`mesa_qos_port_conf_t::dwrr_enable` +
+`mesa_qos_port_conf_t::dwrr_cnt` +
+`mesa_qos_port_queue_conf_t::pct`
 
 .The scheduling can be configured in two different modes:
 * Strict scheduling where all queues are equally prioritized (default).
 * Weighted (DWRR) scheduling where queues are prioritized after a percentual weight.
 
-==== Priority shaper.
+If MESA capability `MESA_CAP_QOS_OT` is not zero there is a separate scheduler for IT and for OT frame flow. +
+Configuration of IT in +
+`mesa_qos_port_conf_t::dwrr_enable` +
+`mesa_qos_port_conf_t::dwrr_cnt` +
+`mesa_qos_port_queue_conf_t::pct`
 
-All frames are going through a priority shaper that shapes frames with a specific classified priority (queue).
-The shaper is configured (`mesa_qos_port_queue_conf_t`) per port per priority (queue). A priority shaper is reducing
-the egress bit rate of a specific priority (queue).
+Configuration of OT in +
+`mesa_qos_port_conf_t::ot_dwrr_enable` +
+`mesa_qos_port_conf_t::ot_dwrr_cnt` +
+`mesa_qos_port_ot_queue_conf_t::pct`
+
+==== Shaper.
+If MESA capability `MESA_CAP_QOS_OT` is not zero there is a separate shaper for IT and for OT frame flow. +
+
+All frames (IT/OT) on a port are going through the shaper configured
+(`mesa_qos_port_conf_t`) for that port. A shaper is reducing the
+egress bit rate on the port.
+
+Configuration of IT in `mesa_qos_port_conf_t::it_shaper`. +
+Configuration of OT in `mesa_qos_port_conf_t::ot_shaper`.
+
+The TAS (Time Aware Shaper) in IT or OT frame flow can be configured in `mesa_qos_tas_port_conf_t::ot`.
+
+==== OT/IT Scheduler.
+If MESA capability `MESA_CAP_QOS_OT` is not zero there is a scheduler that schedules between IT and for OT frame flows.
+
+The scheduler that controls the transmission of all frames from either
+OT or IT input can be configured in +
+`mesa_qos_port_conf_t::ot_it_dwrr_enable` +
+`mesa_qos_port_conf_t::ot_pct`.
+
+.The scheduling can be configured in two different modes:
+* Strict scheduling where IT and OT are equally prioritized (default).
+* Weighted (DWRR) scheduling where IT and OT are prioritized after a percentual weight.
 
 ==== Port shaper.
 
 All frames on a port are going through a Port shaper configured
-(`mesa_qos_port_conf_t`) for that port. A shaper is reducing the
+in `mesa_qos_port_conf_t::shaper` for that port. A shaper is reducing the
 egress bit rate on the port.
 
 ==== [#bookmark-ddm]#DSCP/DPL to DSCP mapping#.
