DOC: Update release note for 2022.03
Merge in UNGE/sw-mesa from 2022.03-soak.mesa-release-note to 2022.03-soak

Squashed commit of the following:

commit 2fa3c521eddc464cf8425f084947a08c1b7cf0ed
Author: Allan W. Nielsen <allan.nielsen@microchip.com>
Date:   Tue Mar 29 11:54:29 2022 +0200

    align release ntoes

commit 42cc03c6985b1cf9f093776fb95e81a08d8afc8f
Author: Rene Nielsen <Rene.Nielsen@microchip.com>
Date:   Tue Mar 29 03:52:21 2022 -0600

    Applied suggestion

commit 82750a4a1a814a67e4b3bf498ded3ce5ea19f850
Author: Rene Nielsen <Rene.Nielsen@microchip.com>
Date:   Tue Mar 29 03:52:11 2022 -0600

    Applied suggestion

commit 9861af4890c731e35f60acce844beb03af3e2a1e
Author: Rene Nielsen <Rene.Nielsen@microchip.com>
Date:   Tue Mar 29 03:52:01 2022 -0600

    Applied suggestion

commit f2cc0d99e50dc9d81dcf82c44f88641fb8e242b6
Author: Allan W. Nielsen <allan.nielsen@microchip.com>
Date:   Tue Mar 29 10:04:07 2022 +0200

    2022.03: draft releaes note

--- a/mesa/docs/release-notes/mesa-2022.03.adoc
+++ b/mesa/docs/release-notes/mesa-2022.03.adoc
@@ -12,10 +12,26 @@
 |Description:      |Roadmap release
 |===
 
-=== Disclaimers
-
 === General
 
 ==== IEC 62439-2, Media Redundancy Protocol
+
 The MRP API has undergone a major overhaul with many non-backward compatible
 changes.
+
+==== LAN966x updates
+
+Capability `MESA_CAP_PACKET_INJ_ENCAP` and `MESA_CAP_VOP_V0` is added.
+
+`MESA_CAP_PACKET_INJ_ENCAP`: Packet Tx supports injection with specific
+encapsulation. This is currently only supported on LAN966x.
+
+`MESA_CAP_VOP_V0`: Is used to distinguish VOP (OAM) differences between LAN966x
+and Serval-1 (in earlier version both was covered by `MESA_CAP_VOP_V1`).
+
+==== Per VLAN Ingress filtering
+
+It is now possible to configure per VLAN ingress filtering using
+`mesa_vlan_vid_conf_t::ingress_filter`. This feature may be used to allow
+VLAN-based FRER configuration to co-exist with MSTP on platforms which do not
+support the `MESA_CAP_L2_MSTP_HW` capability.
