Pull request #200: MEPA-138: SOF feature for lan8814
Merge in UNGE/sw-mesa from master.SOF.MEPA-138 to master

Squashed commit of the following:

commit 6a9622d3bd3c48523e96a8c0472ac1cdd17bc1d7
Author: Divya Koppera <divya.koppera@microchip.com>
Date:   Wed Sep 14 14:23:54 2022 +0530

    MEPA-138: Formating Documentation

commit 17c0ca31da8df9ff58a6b7d1bc9618c7dde44ea3
Author: Divya Koppera <divya.koppera@microchip.com>
Date:   Wed Sep 14 10:47:48 2022 +0530

    MEPA-138: Changed SOF preemption mode type

commit 8ecddc18a1e7360eacf3f94ef718aea86c62ce97
Author: Divya Koppera <divya.koppera@microchip.com>
Date:   Tue Sep 13 17:15:56 2022 +0530

    MEPA-138: Addressed review comments related to documentation and validated sof preemption val

commit 7a61c82954b732ce6f9fdd94ecfddeb79e3836e8
Author: Divya Koppera <divya.koppera@microchip.com>
Date:   Tue Sep 13 14:56:41 2022 +0530

    MEPA-138: Removed spaces and added documentation for SOF feature

commit 9fbbd4744d24cdd38edac4d94a6efcd5a89c59d2
Author: Divya Koppera <divya.koppera@microchip.com>
Date:   Tue Sep 13 11:41:27 2022 +0530

    MEPA-138: Addressed review comments

commit a48e2f8ea01c004862b028e561310ea9e913e584
Author: Divya Koppera <divya.koppera@microchip.com>
Date:   Mon Sep 12 14:12:56 2022 +0530

    MEPA-138: SOF feature for lan8814

--- a/mepa/docs/basic.adoc
+++ b/mepa/docs/basic.adoc
@@ -110,6 +110,33 @@ PHY. It clears up the data allocated in `mepa_create()` function.
 == PHY SQI(Signal Quality Indicator) value
 The API `mepa_sqi_read()` is used to get the signal quality indication
 
+== PHY SOF(Start Of Frame) Pulse
+The API `mepa_start_of_frame_conf_set` is used to set the start of frame
+configuration for generation of an SOF pulse in receive and transmit paths
+using structure `mepa_start_of_frame_conf_t`.
+
+The above structure has below fields:
+
+. `mepa_start_of_frame_conf_t::sof_no`: Four SOF outputs, each of which is
+configurable to be any of the eight available SOF pulses (Tx SOF and Rx SOF on
+each port).
+. `mepa_start_of_frame_conf_t::ingress`: If true SOF pulse is detected for
+ingress packet else it is detected for egress packet.  Direction of frame
+transmission.
+. `mepa_start_of_frame_conf_t::sof_preemption_mode`: This is an enum of type
+`mepa_preemption_mode_t` which can be set to:
+.. `MEPA_PREEMPTION_NORMAL_SFD` or `MEPA_PREEMPTION_SMD_E`: The SOF pulse is
+generated for SMD-E (0xD5 / normal SFD).
+.. `MEPA_PREEMPTION_SMD_EXCEPT_CONTINUOUS`: The SOF pulse is generated for any
+of the SMD values listed in 802.3br-2016 except for the continuation frame:
+SMD-V (0x07), SMD-R (0x19), SMD-E (0xD5) and SMD-S[0,1,2,3] (0xE6. 0x4C, 0x7F or
+0xB3).
+.. `MEPA_PREEMPTION_SMD_ALL`: The SOF pulse is also generated for the
+continuation SMD values SMD-C[0,1,2,3] (0x61, 0x52, 0x9E or 0x2A).
+
+The API `mepa_start_of_frame_conf_get` is used to get the start of frame
+configuration
+
 == API References
 
 `mepa_clause22_read()` +
@@ -130,4 +157,6 @@ The API `mepa_sqi_read()` is used to get the signal quality indication
 `mepa_isolate_mode_conf()` +
 `mepa_debug_info_dump()` +
 `mepa_delete()` +
-`mepa_sqi_read()`
+`mepa_sqi_read()` +
+`mepa_start_of_frame_conf_set()` +
+`mepa_start_of_frame_conf_get()`
