--- a/mepa/docs/timestamp.adoc
+++ b/mepa/docs/timestamp.adoc
@@ -417,17 +417,30 @@ The API `mepa_ts_event_poll()` helps to poll and see if a interrupt/event
 is generated or not.
 
 === Frame Preemption
-If Frame Preemption is not in use, the Start of Frame Delimiter (SFD) appears
-ahead of every Ethernet frame on the PHY port.
 
-If Frame Preemption is in use, one of several possible Start of mPacket Delimiters
-(SMDs) may appear in place of the SFD on the PHY ports.
+==== Definition (Ref. IEEE 802.3Qbu-2016_A26_Framepreemption)
+The suspension of the transmission of a preemptable frame to allow one or
+more express frames to be transmitted before transmission of the preemptable
+frame is resumed
 
-Frame Preemption support over QSGMII: The SMD and SFD characters are
-passed transparently across QSGMII (no PCH/MCH header).
+The default value of frame preemption status is express
 
-Frame Preemption support over Q-USGMII: The SMD and SFD characters are
-passed across Q-USGMII using the PCH or MCH header.
+==== MAC Merge Packet (mPacket) (Ref. 8023br-2016)
+This mPacket format starts with the normal preamble but supplements the normal
+Start of Frame Delimiter (SFD = 0xD5) with newly defined Start mPacket
+Delimiters (SMDs) of various values. Also added for certain mPackets is a
+fragment count octet.
+
+==== 1588 FRAME PARSING
+1588 processing is supported with Frame Preemption but only for Express frames.
+The frame parser will ignore any packet that does not contain the standard SFD.
+
+* Standalone Mode - The SMD and SFD characters are passed transparently across
+QSGMII (no PCH/MCH header).
+
+* PCH/MCH Mode - The SMD and SFD characters are passed across Q-USGMII using
+the PCH or MCH header.
+
 
 The API `mepa_ts_framepreempt_get()` helps to get the current configuration of Frame Preemption
 
